--- a/src/app/pages/event/event.component.css
+++ b/src/app/pages/event/event.component.css
@@ -82,7 +82,7 @@ body {
   color: #777777;
 }
 
-.content .item a .btn-sign-up {
+.btn-sign-up {
   background: linear-gradient(90deg, #f05198 -5.82%, #544e9e 100.09%);
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
   border-radius: 20px;
@@ -95,7 +95,7 @@ body {
   cursor: pointer;
   padding: 10px 50px;
   margin-left: 50px;
-  width: 355px;
+  width: 80%;
   height: 40px;
   justify-content: center;
 }
