--- a/src/app/pages/event/event.component.html
+++ b/src/app/pages/event/event.component.html
@@ -6,7 +6,7 @@
     <div class="content">
       <ng-container class="conteudo" *ngFor="let event of evento">
         <div class="item">
-          <a href="#">
+          <a>
             <div class="conteudo-img">
               <img src="../../../assets/images/teckweek.jpg" alt="Certfacil" />
             </div>
@@ -23,9 +23,9 @@
                 área de Tecnologia de Informação e no ambiente acadêmico.
               </h5>
             </div>
-            <a class="btn-sign-up" href="#">Inscreva-se</a>
+            <a class="btn-sign-up" (click)="createevente(event.id)">Inscreva-se</a>
           </a>
-          <a href="#">
+          <a>
             <div class="video">
               <h3>Ver vídeo</h3>
             </div>
