Fix: Estilização botão de upload de imagem

--- a/src/app/pages/createevent/createevent.component.css
+++ b/src/app/pages/createevent/createevent.component.css
@@ -1,59 +1,7 @@
-.cabecalho {
-  height: 60px;
-  background: linear-gradient(90deg, #f05097 0%, #514d9e 100%);
-}
-
-.logo {
-  display: block;
-  height: 50px;
-  margin: 0 auto;
-  padding: 10px 0 0;
-}
-
 .container {
   display: flex;
   margin: 0;
   padding: 0;
-}
-
-.container .menu {
-  background-color: white;
-  height: 130vh;
-  width: 45%;
-  filter: drop-shadow(0px 0px 4px rgba(0, 0, 0, 0.25));
-}
-
-.container .menu ul {
-  list-style: none;
-  margin: 0 auto;
-  padding: 100px 0 0;
-}
-
-.container .menu li {
-  padding: 0 0 50px 40px;
-  align-items: center;
-  margin: auto 0;
-  font-family: "Nunito";
-  font-weight: 700;
-  font-size: 18px;
-  color: black;
-  cursor: pointer;
-  transition: linear 0.2s;
-}
-
-.container .menu li:hover {
-  color: var(--pink);
-}
-
-.container .menu li svg {
-  width: 35px;
-  height: 35px;
-  object-fit: contain;
-  margin-right: 10px;
-}
-
-.container .menu li svg:hover path {
-  fill: var(--pink);
 }
 
 .container .form-box .name {
@@ -66,10 +14,7 @@
   line-height: 22px;
   margin: 0 auto;
   padding: 80px 0 60px;
-
-  /* or 85% */
   text-align: center;
-
   color: #000000;
 }
 
@@ -101,6 +46,33 @@
   border-radius: 20px;
   align-items: center;
   margin: 0 auto 30px auto;
+}
+
+.container .form-box form .upload {
+  display: none;
+}
+
+.container .form-box form label {
+  border: none;
+  padding-left: 15px;
+  width: 312px;
+  height: 40px;
+  display: flex;
+  background: #ffffff;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  border-radius: 20px;
+  align-items: center;
+  margin: 0 auto 30px auto;
+  cursor: pointer;
+  font-family: "Nunito";
+  font-style: normal;
+  font-weight: 600;
+  color: #767676;
+}
+
+.container .form-box form label img {
+  margin: 0 0 0 auto;
+  padding-right: 20px;
 }
 
 .button {
