Fix: Register Semestre

--- a/src/app/pages/register/register.component.html
+++ b/src/app/pages/register/register.component.html
@@ -95,6 +95,17 @@
           <div>
             <input
               class="input"
+              id="campus"
+              type="text"
+              formControlName="semestre"
+              placeholder="Semestre*"
+              required
+            />
+          </div>
+
+          <div>
+            <input
+              class="input"
               id="password"
               type="password"
               formControlName="password"
