Feature: Criacao das paginas referente a recuperacao de senha e alteraçoes nas paginas de eventos, create eventos e lista de presenca

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -12,11 +12,9 @@
             <div class="conteudo-textos">
               <h3 class="titulo">{{ event.descricao }}</h3>
               <h4 class="local">
-                Cidade: ?? <br />
-                Local: ??<br />
                 Data: {{ event.data_inicio }}, Horario: {{ event.inicio }}
               </h4>
-              <h5 class="descricao">?????</h5>
+              <h5 class="descricao">{{event.nota}}</h5>
             </div>
           </a>
         </div>
