--- a/src/app/pages/attendancelist/attendancelist.component.html
+++ b/src/app/pages/attendancelist/attendancelist.component.html
@@ -11,11 +11,9 @@
             <div class="conteudo-textos">
               <h3 class="titulo">{{ event.descricao }}</h3>
               <h4 class="local">
-                Cidade: ?? <br />
-                Local: ??<br />
                 Data: {{ event.data_inicio }}, Horario: {{ event.inicio }}
               </h4>
-              <h5 class="descricao">?????</h5>
+              <h5 class="descricao">{{event.nota}}</h5>
               <input type="submit" class="button" value="Fazer Chamada" (click)="Chamada(event.id)"/>
             </div>
         </div>
