--- a/src/app/pages/createevent/createevent.component.html
+++ b/src/app/pages/createevent/createevent.component.html
@@ -38,15 +38,23 @@
             required
             (keydown)="search($event)"
           />
-
-          <input type="number" placeholder="Carga horária" />
           <input
+            formControlName="carga_horaria"
+            type="number"
+            placeholder="Carga horária"
+          />
+          <label for="upload"
+            >Upload capa do evento
+            <img src="../../../assets/images/upload.svg" alt="Certfacil" />
+          </label>
+          <input
+            class="upload"
             type="file"
-            placeholder="Imagem do curso"
+            placeholder="Imagem do evento"
             id="upload"
             (change)="onChange($event)"
+            accept="image/*"
           />
-
           <button class="button" type="submit" (click)="onSubmit()">
             Criar evento
           </button>
