--- a/src/app/pages/event/event.component.html
+++ b/src/app/pages/event/event.component.html
@@ -13,23 +13,19 @@
             <div class="conteudo-textos">
               <h3 class="titulo">{{ event.descricao }}</h3>
               <h4 class="local">
-                Cidade: ?? <br />
-                Local: ??<br />
                 Data: {{ event.data_inicio }}, Horario: {{ event.inicio }}
               </h4>
               <h5 class="descricao">
-                Evento realizado na Universidade de Tecnologia e Ciências -
-                UNIFTC, com tema (Gamification - Movimentando a Aprendizagem) na
-                área de Tecnologia de Informação e no ambiente acadêmico.
+                {{event.nota}}
               </h5>
             </div>
             <a class="btn-sign-up" (click)="createevente(event.id)">Inscreva-se</a>
           </a>
-          <a>
+          <!-- <a>
             <div class="video">
               <h3>Ver vídeo</h3>
             </div>
-          </a>
+          </a> -->
         </div>
       </ng-container>
     </div>
