--- a/src/app/pages/event/event.component.html
+++ b/src/app/pages/event/event.component.html
@@ -6,26 +6,26 @@
     <div class="content">
       <ng-container class="conteudo" *ngFor="let event of evento">
         <div class="item">
-          <a>
-            <div class="conteudo-img">
-              <img src="../../../assets/images/teckweek.jpg" alt="Certfacil" />
-            </div>
-            <div class="conteudo-textos">
-              <h3 class="titulo">{{ event.descricao }}</h3>
-              <h4 class="local">
-                Data: {{ event.data_inicio }}, Horario: {{ event.inicio }}
-              </h4>
-              <h5 class="descricao">
-                {{event.nota}}
-              </h5>
-            </div>
-            <a class="btn-sign-up" (click)="createevente(event.id)">Inscreva-se</a>
+          <div class="conteudo-img">
+            <img src="../../../assets/images/teckweek.jpg" alt="Certfacil" />
+          </div>
+          <div class="conteudo-textos">
+            <h3 class="titulo">{{ event.descricao }}</h3>
+            <h4 class="local">
+              Data: {{ event.data_inicio }}, Horario: {{ event.inicio }}
+            </h4>
+            <h5 class="descricao">
+              {{ event.nota }}
+            </h5>
+          </div>
+          <a class="btn-sign-up" (click)="createevente(event.id)"
+            >Inscreva-se</a
+          >
+        </div>
+        <div class="video">
+          <a href="#">
+            <h3>Ver vídeo</h3>
           </a>
-          <!-- <a>
-            <div class="video">
-              <h3>Ver vídeo</h3>
-            </div>
-          </a> -->
         </div>
       </ng-container>
     </div>
