--- a/src/app/pages/attendancelist/attendancelist.component.css
+++ b/src/app/pages/attendancelist/attendancelist.component.css
@@ -8,24 +8,18 @@ body {
   display: flex;
 }
 .content {
-  padding-left: 150px;
+  padding-left: 60px;
   padding-top: 90px;
   width: 100%;
 }
 
 .content .item {
   padding-bottom: 30px;
-  position: relative;
-}
-
-.content .item a {
   display: flex;
-  text-decoration: none;
   align-items: center;
-  position: relative;
 }
 
-.content .item a .conteudo-img {
+.content .item .conteudo-img {
   display: flex;
   margin-right: 50px;
   width: 256px;
@@ -34,13 +28,17 @@ body {
   min-width: 256px;
 }
 
-.content .item a .conteudo-img img {
+.content .item .conteudo-img img {
   margin: auto 0;
   display: block;
   object-fit: cover;
 }
+.content .item .conteudo-textos {
+  min-width: 435px;
+  max-width: 435px;
+}
 
-.content .item a .conteudo-textos .titulo {
+.content .item .conteudo-textos .titulo {
   font-family: "Nunito";
   font-style: normal;
   font-weight: bold;
@@ -53,7 +51,7 @@ body {
   margin: 0;
 }
 
-.content .item a .conteudo-textos .local {
+.content .item .conteudo-textos .local {
   font-family: "Nunito";
   font-style: normal;
   font-weight: bold;
@@ -65,7 +63,7 @@ body {
   color: black;
 }
 
-.content .item a .conteudo-textos .descricao {
+.content .item .conteudo-textos .descricao {
   font-family: "Nunito";
   font-style: normal;
   font-weight: 500;
@@ -78,37 +76,20 @@ body {
   color: #777777;
 }
 
-.content .item a .video {
-  background: transparent;
-  top: -166px;
-  position: absolute;
-  transition: linear 0.3s;
-  width: 100%;
-  height: 166px;
-  opacity: 0;
-  display: flex;
-  align-items: end;
-}
-
-.content .item a {
-  text-decoration: none;
+.content .item button {
+  border: none;
+  width: 185px;
+  height: 40px;
   color: white;
-}
-
-.content .item a .video:hover {
-  opacity: 1;
-}
-
-.content .item a .video h3 {
+  background: linear-gradient(90deg, #f05198 -5.82%, #544e9e 100.09%);
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  border-radius: 20px;
+  margin-left: 32px;
   font-family: "Nunito";
-  font-weight: bold;
-  font-size: 15px;
-  line-height: 16px;
-  text-transform: capitalize;
-  color: white;
-  text-align: center;
-  padding: 15px 0;
-  margin: 0;
-  width: 100%;
-  background: linear-gradient(90deg, #f05097 0%, #514d9e 100%);
+  font-style: normal;
+  font-weight: normal;
+  font-size: 16px;
+  line-height: 30px;
+  cursor: pointer;
+  justify-content: center;
 }
