--- a/src/app/pages/event/event.component.css
+++ b/src/app/pages/event/event.component.css
@@ -8,24 +8,27 @@ body {
   display: flex;
 }
 .content {
-  padding-left: 150px;
+  padding-left: 60px;
   padding-top: 90px;
   width: 100%;
 }
 
-.content .item {
-  padding-bottom: 30px;
-  position: relative;
+.content .item .conteudo-textos {
+  width: 435px;
 }
 
-.content .item a {
+.content .item {
+  padding-bottom: 30px;
+}
+
+.content .item {
   display: flex;
   text-decoration: none;
   align-items: center;
   position: relative;
 }
 
-.content .item a .conteudo-img {
+.content .item .conteudo-img {
   display: flex;
   margin-right: 50px;
   width: 256px;
@@ -34,17 +37,18 @@ body {
   min-width: 256px;
 }
 
-.content .item a .conteudo-img img {
+.content .item .conteudo-img img {
   margin: auto 0;
   display: block;
   object-fit: cover;
 }
 
-.content .item a .conteudo-textos {
-  width: fit-content;
+.content .item .conteudo-textos {
+  min-width: 435px;
+  max-width: 435px;
 }
 
-.content .item a .conteudo-textos .titulo {
+.content .item .conteudo-textos .titulo {
   font-family: "Nunito";
   font-style: normal;
   font-weight: bold;
@@ -57,7 +61,7 @@ body {
   margin: 0;
 }
 
-.content .item a .conteudo-textos .local {
+.content .item .conteudo-textos .local {
   font-family: "Nunito";
   font-style: normal;
   font-weight: bold;
@@ -69,7 +73,7 @@ body {
   color: black;
 }
 
-.content .item a .conteudo-textos .descricao {
+.content .item .conteudo-textos .descricao {
   font-family: "Nunito";
   font-style: normal;
   font-weight: 500;
@@ -83,45 +87,54 @@ body {
 }
 
 .btn-sign-up {
+  border: none;
+  width: 185px;
+  height: 40px;
+  color: white;
   background: linear-gradient(90deg, #f05198 -5.82%, #544e9e 100.09%);
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
   border-radius: 20px;
-  color: white;
+  margin-left: 32px;
   font-family: "Nunito";
   font-style: normal;
   font-weight: normal;
   font-size: 16px;
   line-height: 30px;
   cursor: pointer;
-  padding: 10px 50px;
-  margin-left: 50px;
-  width: 80%;
-  height: 40px;
+  display: flex;
+  text-decoration: none;
   justify-content: center;
+  align-content: center;
+  align-items: center;
 }
 
-.content .item a .video {
+.content .video {
   background: transparent;
-  top: -166px;
-  position: absolute;
+  position: relative;
   transition: linear 0.3s;
-  width: 100%;
-  height: 166px;
   opacity: 0;
   display: flex;
   align-items: end;
+  height: 40px;
 }
 
-.content .item a {
+.content .video a {
+  top: -86px;
+  right: 0;
+  left: 0;
+  z-index: 12;
+  position: relative;
   text-decoration: none;
-  color: white;
+  width: 958px;
+  background: linear-gradient(90deg, #f05097 0%, #514d9e 100%);
+  align-content: center;
 }
 
-.content .item a .video:hover {
+.content .video:hover {
   opacity: 1;
 }
 
-.content .item a .video h3 {
+.content .video h3 {
   font-family: "Nunito";
   font-weight: bold;
   font-size: 15px;
@@ -132,5 +145,4 @@ body {
   padding: 15px 0;
   margin: 0;
   width: 100%;
-  background: linear-gradient(90deg, #f05097 0%, #514d9e 100%);
 }
