Fix: Incrição no envento e mostra no myevents

--- a/src/app/shared/confirm-presenca/confirmpresenca/confirmpresenca.component.html
+++ b/src/app/shared/confirm-presenca/confirmpresenca/confirmpresenca.component.html
@@ -25,14 +25,14 @@
       </button>
     </div>
 
-    <div *ngIf="buttonpresencaone">
+    <div class="presenca-container" *ngIf="buttonpresencaone">
       <p>Confirma Presença 1</p>
       <button type="button" class="btn btn-secondary" (click)="Confirmtwo()">
         Confirmar
       </button>
     </div>
 
-    <div *ngIf="buttonpresncatwo">
+    <div class="presenca-container" *ngIf="buttonpresncatwo">
       <p>Confirma Presença 2</p>
       <button type="button" class="btn btn-secondary" (click)="Confirmtwo()">
         Confirmar
