Feature: layout certificado

--- a/src/app/shared/pdf/pdf.component.html
+++ b/src/app/shared/pdf/pdf.component.html
@@ -1,4 +1,5 @@
 <img src="../../../assets/images/bg-pdf.png" alt="CertFacil" />
+
 <div class="content" id="content" #content>
   <h3>Certificado de Participação</h3>
   <h1>
@@ -12,7 +13,7 @@
     <strong>Aprendendo a criar aplicativos Mobiles com React Native</strong>,
     com carga horária de 2h.
   </h5>
-  <h5>Feira de Santana, 14 de novembro de 2020.</h5>
+  <h5 class="data">Feira de Santana, 14 de novembro de 2020.</h5>
   <div class="assinaturas">
     <div class="item">
       <hr />
