--- a/src/app/pages/myevents/myevents.component.html
+++ b/src/app/pages/myevents/myevents.component.html
@@ -1,7 +1,7 @@
 <app-header></app-header>
 
-<body>
-  <div class="container">
+<body id="content" #content>
+  <div class="container" >
     <app-headermenu></app-headermenu>
     <div class="content">
       <ng-container class="conteudo" *ngFor="let event of evento">
