--- a/src/app/shared/pdf/pdf.component.css
+++ b/src/app/shared/pdf/pdf.component.css
@@ -58,7 +58,6 @@ img {
   padding-top: 35px;
 }
 
-
 .content .nome-participante {
   font-family: "Nunito";
   font-style: normal;
@@ -67,8 +66,7 @@ img {
   margin: 0;
   padding: 30px 0;
   color: white;
-
-
+}
 
 .content .assinaturas {
   display: flex;
