Fix: correções solicitadas pela a equipe de teste

--- a/src/app/pages/myprofile/myprofile.component.html
+++ b/src/app/pages/myprofile/myprofile.component.html
@@ -11,7 +11,7 @@
 
 		  <form novalidate [formGroup]="form">
 			<label for="name"></label><br>
-       		 <input type="text" value={{apelido}} disabled>
+       		 <input type="text" formControlName="apelido" placeholder="ID: {{id}} | {{apelido}}">
 			<label for="email"></label>
         	<input type="email"value={{email}} disabled>
       <label for="campus"></label><br>
