--- a/src/app/pages/register/register.component.html
+++ b/src/app/pages/register/register.component.html
@@ -95,7 +95,7 @@
           <div>
             <input
               class="input"
-              id="campus"
+              id="semestre"
               type="text"
               formControlName="semestre"
               placeholder="Semestre*"
