--- a/src/app/pages/createevent/createevent.component.html
+++ b/src/app/pages/createevent/createevent.component.html
@@ -43,7 +43,7 @@
             type="number"
             placeholder="Carga horária"
           />
-          <label for="upload"
+          <!-- <label for="upload"
             >Upload capa do evento
             <img src="../../../assets/images/upload.svg" alt="Certfacil" />
           </label>
@@ -54,7 +54,7 @@
             id="upload"
             (change)="onChange($event)"
             accept="image/*"
-          />
+          /> -->
           <button class="button" type="submit" (click)="onSubmit()">
             Criar evento
           </button>
