--- a/src/app/shared/headermenu/headermenu.component.html
+++ b/src/app/shared/headermenu/headermenu.component.html
@@ -122,7 +122,7 @@
         </li>
       </ng-container>
 
-      <ng-container>
+      <ng-container *ngIf="sair">
         <li>
           <a (click)="logout()">
             <svg
