Fix: Capturando a Imagem quando baixa o pdf

--- a/src/app/shared/pdf/pdf.component.html
+++ b/src/app/shared/pdf/pdf.component.html
@@ -1,5 +1,3 @@
-<img src="../../../assets/images/bg-pdf.png" alt="CertFacil" />
-
 <div class="content" id="content" #content>
   <h3>Certificado de Participação</h3>
   <h1>
@@ -7,11 +5,11 @@
     Sistemas de Informação
   </h1>
   <h5>Certificamos que</h5>
-  <h5 class="nome-participante">Beatriz Alves Felipe</h5>
+  <h5 class="nome-participante">{{nome}}</h5>
   <h5>
     participou do 1° Ciclo de Oficinas em Sistemas de Informação
-    <strong>Aprendendo a criar aplicativos Mobiles com React Native</strong>,
-    com carga horária de 2h.
+    <strong>{{descricao}}</strong>,
+    com carga horária de {{carga_horaria}}h.
   </h5>
   <h5 class="data">Feira de Santana, 14 de novembro de 2020.</h5>
   <div class="assinaturas">
