--- a/src/app/shared/pdf/pdf.component.css
+++ b/src/app/shared/pdf/pdf.component.css
@@ -1,3 +1,10 @@
+#content{
+  background-image: url(../../../assets/images/bg-pdf.png);
+  color: white;
+  padding: 20px;
+  margin: auto 0;
+}
+
 img {
   object-fit: cover;
   height: 100vh;
