--- a/src/app/shared/pdf/pdf.component.html
+++ b/src/app/shared/pdf/pdf.component.html
@@ -11,7 +11,7 @@
     <strong>{{descricao}}</strong>,
     com carga horária de {{carga_horaria}}h.
   </h5>
-  <h5 class="data">Feira de Santana, 14 de novembro de 2020.</h5>
+  <h5 class="data">Feira de Santana, {{data}}.</h5>
   <div class="assinaturas">
     <div class="item">
       <hr />
