--- a/src/app/pages/attendancelist/attendancelist.component.css
+++ b/src/app/pages/attendancelist/attendancelist.component.css
@@ -76,7 +76,11 @@ body {
   color: #777777;
 }
 
-.content .item button {
+.container .item .butons {
+  display: inline;
+}
+
+.container .item .butons .btn-sign-up {
   border: none;
   width: 185px;
   height: 40px;
@@ -91,5 +95,9 @@ body {
   font-size: 16px;
   line-height: 30px;
   cursor: pointer;
+  display: flex;
+  text-decoration: none;
   justify-content: center;
+  align-content: center;
+  align-items: center;
 }
