--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -17,7 +17,7 @@
     <form novalidate [formGroup]="form">
       <input
         id="email"
-        type="text"
+        type="email"
         formControlName="email"
         placeholder="Usuário"
         formControlName="email"
