--- a/src/app/pages/recover/recover.component.html
+++ b/src/app/pages/recover/recover.component.html
@@ -10,7 +10,7 @@
 
     <div>
 
-      <input id="email" type="text" formControlName="email" placeholder="Email">
+      <input id="email" type="email" formControlName="email" placeholder="Email">
     </div>
 
     <button class="button" type="submit" (click)="onSubmit()">Enviar</button>
