--- a/src/app/shared/pdf/pdf.component.html
+++ b/src/app/shared/pdf/pdf.component.html
@@ -5,13 +5,13 @@
     Sistemas de Informação
   </h1>
   <h5>Certificamos que</h5>
-  <h5 class="nome-participante">{{nome}}</h5>
+  <h5 class="nome-participante">{{ nome }}</h5>
   <h5>
     participou do 1° Ciclo de Oficinas em Sistemas de Informação
-    <strong>{{descricao}}</strong>,
-    com carga horária de {{carga_horaria}}h.
+    <strong>{{ descricao }}</strong
+    >, com carga horária de {{ carga_horaria }}h.
   </h5>
-  <h5 class="data">Feira de Santana, {{data}}.</h5>
+  <h5 class="data">Feira de Santana, {{ data }}.</h5>
   <div class="assinaturas">
     <div class="item">
       <hr />
@@ -25,4 +25,3 @@
     </div>
   </div>
 </div>
-
