--- a/src/app/pages/home/home.component.css
+++ b/src/app/pages/home/home.component.css
@@ -8,7 +8,7 @@ body {
   display: flex;
 }
 .content {
-  padding-left: 60px;
+  padding-left: 400px;
   padding-top: 90px;
   width: 100%;
 }
@@ -100,4 +100,29 @@ body {
   justify-content: center;
   align-content: center;
   align-items: center;
+  margin-bottom: 15px;
+}
+
+.container .item .butons .btn-delete {
+  border: none;
+  width: 185px;
+  height: 40px;
+  color: var(--pink);
+  background: transparent;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  border-radius: 20px;
+  border: 2px solid var(--pink);
+  margin-left: 32px;
+  font-family: "Nunito";
+  font-style: normal;
+  font-weight: normal;
+  font-size: 16px;
+  line-height: 30px;
+  cursor: pointer;
+  display: flex;
+  text-decoration: none;
+  justify-content: center;
+  align-content: center;
+  align-items: center;
+  margin-bottom: 15px;
 }
