--- a/src/app/shared/header/header.component.scss
+++ b/src/app/shared/header/header.component.scss
@@ -3,6 +3,9 @@
   background: linear-gradient(90deg, #f05097 0%, #514d9e 100%);
   display: flex;
   justify-content: center;
+  position: fixed;
+  width: 100%;
+  z-index: 3;
 }
 
 a {
