--- a/src/app/shared/pdf/pdf.component.css
+++ b/src/app/shared/pdf/pdf.component.css
@@ -1,15 +1,12 @@
-#content{
+#content {
   background-image: url(../../../assets/images/bg-pdf.png);
+  background-repeat: no-repeat;
+  background-size: cover;
   color: white;
-  padding: 20px;
+  padding: 0;
   margin: auto 0;
-}
-
-img {
-  object-fit: cover;
-  height: 100vh;
   width: 100%;
-  position: relative;
+  height: 100vh;
 }
 
 .content {
@@ -78,7 +75,7 @@ img {
 .content .assinaturas {
   display: flex;
   justify-content: space-around;
-  margin-top: 70px;
+  margin-top: 100px;
 }
 
 .content .assinaturas .item hr {
