--- a/src/styles.css
+++ b/src/styles.css
@@ -1,7 +1,7 @@
 @import "~bootstrap/dist/css/bootstrap.css";
 body {
   margin: 0;
-  height: 100vh;
+  height: 100%;
   background-color: var(--grey);
 }
 
