--- a/src/app/pages/attendancelist/attendancelist.component.html
+++ b/src/app/pages/attendancelist/attendancelist.component.html
@@ -1,8 +1,8 @@
 <app-header></app-header>
 <body>
+  <app-headermenu></app-headermenu>
   <div class="container">
-    <app-headermenu></app-headermenu>
-    <div class="content">
+    <div class="conteudo">
       <ng-container class="conteudo" *ngFor="let event of evento">
         <div class="item">
           <div class="conteudo-img">
@@ -16,18 +16,17 @@
             <h5 class="descricao">{{ event.nota }}</h5>
           </div>
           <div class="butons">
-            <div >
+            <div>
               <button
-              class="btn-sign-up"
-              type="submit"
+                class="btn-sign-up"
+                type="submit"
                 value="Fazer Chamada"
-            (click)="Chamada(event.id)"
+                (click)="Chamada(event.id)"
               >
-                Fazer chamada
-             </button><br>
+                Fazer chamada</button
+              ><br />
             </div>
           </div>
-
         </div>
       </ng-container>
     </div>
