--- a/src/app/pages/createevent/createevent.component.html
+++ b/src/app/pages/createevent/createevent.component.html
@@ -1,7 +1,7 @@
 <app-header></app-header>
 <body>
-  <div class="container">
-    <app-headermenu></app-headermenu>
+  <app-headermenu></app-headermenu>
+  <div class="conteudo">
     <div class="form-box">
       <div class="form-content">
         <div>
