--- a/src/app/pages/index/index.component.html
+++ b/src/app/pages/index/index.component.html
@@ -14,7 +14,7 @@
       </a>
       <a class="button-login" href="/login">Login</a>
     </div>
-    <div class="container">
+    <div class="conteudo">
       <div class="content">
         <h1>
           Organizar eventos <br />
