--- a/src/app/shared/headermenu/headermenu.component.scss
+++ b/src/app/shared/headermenu/headermenu.component.scss
@@ -1,14 +1,17 @@
 .container {
-  display: flex;
   margin: 0;
   padding: 0;
   position: fixed;
+  width: 25%;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  padding-top: 60px;
 }
 
 .container .menu {
   background-color: white;
   height: 100vh;
-  width: 320px;
   filter: drop-shadow(0px 0px 4px rgba(0, 0, 0, 0.25));
 }
 
@@ -57,8 +60,8 @@
 
 .content {
   padding-left: 400px;
-  padding-top: 90px;
-  width: 100%;
+  padding-top: 60px;
+  width: 100vh;
 }
 
 .content .item {
