--- a/src/app/pages/index/index.component.css
+++ b/src/app/pages/index/index.component.css
@@ -2,6 +2,7 @@ body {
   background-image: linear-gradient(to bottom right, #f15097, #484c9e);
   height: 100vh;
   margin: 0;
+  overflow: hidden;
 }
 
 .top-bar {
@@ -92,6 +93,7 @@ body {
 
 .conteudo .content-img img {
   object-fit: cover;
+  max-width: 500px;
 }
 
 ::selection {
