--- a/src/app/pages/createevent/createevent.component.html
+++ b/src/app/pages/createevent/createevent.component.html
@@ -49,7 +49,7 @@
             type="number"
             placeholder="Carga horária"
           />
-          <!-- <label for="upload"
+          <label for="upload"
             >Upload capa do evento
             <img src="../../../assets/images/upload.svg" alt="Certfacil" />
           </label>
@@ -58,9 +58,9 @@
             type="file"
             placeholder="Imagem do evento"
             id="upload"
-            (change)="onChange($event)"
+            (change)="upload($event)"
             accept="image/*"
-          /> -->
+          />
           <button class="button" type="submit" (click)="onSubmit()">
             Criar evento
           </button>
